<resources>

    <!-- DESCRIPCIONES -->
    <string name="user_cancelled">El usuario canceló</string>
    <string name="preferences_saved">Se han guardado tus gustos</string>
    <string name="tv_register2_text">Por favor, desliza para puntuar cada género</string>
    <string name="add_favorites">Película vista</string>
    <string name="favorites_saved">Película añadida a tus favoritos</string>
    <string name="user_deleted_success">Usuario eliminado exitosamente</string>
    <string name="settings_activity_log_tag">SettingsActivity</string>
    <string name="registration_preferences">Registro</string>
    <string name="user_key">user</string>
    <string name="email_key">email</string>
    <string name="password_key">password</string>
    <string name="repeat_password_key">repeatPassword</string>
    <string name="google_sign_in_key">googleSignIn</string>
    <string name="providers_key">proveedores</string>
    <string name="preferences_key">preferencias</string>
    <string name="users_node">users</string>
    <string name="preferences_node">preferencias</string>
    <string name="providers_node">proveedores</string>
    <string name="registration_successful">Registro exitoso.</string>
    <string name="registration_log_tag">RegisterActivity</string>


    <!--TEXTO DEL SISTEMA-->
    <string name="app_name">DecideCine</string>
    <string name="title_text">Bienvenido a DecideCine Introduce tus credenciales para iniciar sesión</string>
    <string name="tv_email">Correo electrónico</string>
    <string name="hint_email">Tu correo ...</string>
    <string name="tv_password">Contraseña</string>
    <string name="hint_password">Tu contraseña...</string>
    <string name="tv_not_account">¿Aún no tienes cuenta? </string>
    <string name="tv_register1_text"> Bienvenido a DecideCine!, vamos a registrarte, para ello completa el siguiente formulario, tan sólo te tomará unos minutos</string>
    <string name="tv_user">Nombre de usuario</string>
    <string name="hint_user">Tu usuario …</string>
    <string name="tv_repeat_password">Confirmar contraseña</string>
    <string name="have_account">¿Ya tienes cuenta?</string>
    <string name="tv_login">Inicia sesión</string>
    <string name="tv_register1"> 1/3. Crear cuenta </string>
    <string name="tv_register2"> 2/3. Selecciona tus preferencias </string>
    <string name="tv_register3"> 3/3. Selecciona tus proveedores </string>
    <string name="tv_register3_text"> Selecciona tus proveedores </string>
    <string name="tv_forgotten_pass"><u>He olvidado mi contraseña</u></string>
    <string name="recommended">Recomendadas para tí</string>
    <string name="surprise_me">Películas que podrian interesarte</string>
    <string name="coming_soon">Próximamente</string>
    <string name="btn_recommended">Veamos</string>
    <string name="btn_surprise">Adelante</string>
    <string name="about_app">Sobre la app</string>
    <string name="about_app_text">
        Aplicación creada para el trabajo de fin de curso de segundo año del grado superior: desarrollo
        de aplicaciones multiplataforma.</string>
    <string name="favorite">Película favorita</string>
    <string name="delete_from_favorite">Película eliminada de favoritos</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="tv_users">App</string>
    <string name="tv_prefs">Preferencias</string>
    <string name="your_list">Tu lista</string>
    <string name="latest">Últimas novedades</string>
    <string name="genres">Todos los géneros</string>
    <string name="added_movies">Aquí aparecerán tus peliculas añadidas</string>
    <string name="account">Cuenta</string>
    <string name="author">Francisco Javier Martín España</string>
    <string name="course">Desarrollo de aplicaciones multiplataforma</string>
    <string name="instituto">I.E.S Al-Andalus</string>
    <string name="year">2024</string>
    <string name="add_user_title">Añadir usuario</string>
    <string name="add_user_message">Por favor, introduce un nombre</string>
    <string name="delete_user_title">Eliminar usuario</string>
    <string name="confirm_delete_title">Confirmar eliminación</string>
    <string name="confirm_delete_message">¿Estás seguro de que quieres eliminar a %1$s?</string>
    <string name="user_deleted_message">%1$s ha sido eliminado.</string>
    <string name="select_user_title">Seleccionar usuario</string>
    <string name="all_users">Lista de usuarios</string>
    <string name="delete_account_title">Eliminar cuenta</string>
    <string name="delete_account_message">¿Estás seguro de que quieres eliminar tu cuenta? Esta acción no se puede deshacer.</string>
    <string name="available_platforms">Plataformas disponibles: </string>
    <string name="please_enter_email">Por favor, introduce el correo electrónico.</string>
    <string name="enter_email_please">Ingresa un email por favor</string>
    <string name="email_sent">Email Enviado, revisa tu correo</string>
    <string name="verify_email">Por favor, verifica tu correo electrónico.</string>
    <string name="summary">Sinopsis</string>
    <string name="anymore">más</string>
    <string name="dont_think">Y no pienses</string>
    <string name="users">Usuarios</string>


    <!-- MENSAJES DE ERROR -->
    <string name="movie_not_found">Película no encontrada</string>
    <string name="error_fetching">Error encontrando película</string>
    <string name="error_providers">Error encontrando proveedores</string>
    <string name="error_updating_data">Error al resetear preferencias</string>
    <string name="movie_dont_available">No disponible en plataformas actualmente</string>
    <string name="no_matching_movies">¡Aún no has añadido películas!.</string>
    <string name="error_getting_data">Error recibiendo los datos</string>
    <string name="user_exists_message">El nombre de usuario ya existe. Por favor, introduce un nombre diferente.</string>
    <string name="minimum_user_message">Mínimo debes tener un usuario.</string>
    <string name="delete_error_message">Hubo un error al intentar eliminar a %1$s.</string>
    <string name="user_deleted_error">Error al eliminar usuario</string>
    <string name="user_not_authenticated">Usuario no autenticado</string>
    <string name="failed_to_read_value">Fallo al leer el valor.</string>
    <string name="missing_fields_message">Parece que falta algo</string>
    <string name="passwords_do_not_match">Las contraseñas no coinciden</string>
    <string name="user_is_required">El usuario es obligatorio</string>
    <string name="email_is_required">El email es obligatorio</string>
    <string name="invalid_email">El email no es válido</string>
    <string name="password_is_required">La contraseña es obligatoria</string>
    <string name="password_min_length">Contraseña minimo 8 caracteres</string>
    <string name="repeat_password_is_required">Debes repetir la contraseña</string>
    <string name="error_sending_verification_email">Error al enviar el correo de verificación</string>
    <string name="registration_failed">Registro fallido</string>
    <string name="email_already_in_use">Este correo electrónico ya está en uso.</string>
    <string name="email_is_malformed">El correo electrónico está mal formado.</string>
    <string name="authentication_failed">Error en la autenticación</string>


    <!-- ACCIONES -->
    <string name="tv_add">Añadir usuario</string>
    <string name="tv_del">Eliminar usuario</string>
    <string name="tv_edit_prefs">Editar preferencias</string>
    <string name="del_acc">Eliminar cuenta</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="btn_continue">Continuar</string>
    <string name="prev">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="finish">Finalizar</string>
    <string name="btn_start">Comencemos</string>
    <string name="exit">Salir</string>
    <string name="about_this">Acerca de la app</string>
    <string name="btn_google_sign_in">Inicia sesión con Google</string>
    <string name="logout">Cerrar sesión</string>
    <string name="edit_preferences">Edita tus preferencias</string>
    <string name="edit_providers">Edita tus proveedores</string>
    <string name="see_more">Ver más</string>
    <string name="add_list">Añadir a tu lista</string>
    <string name="login">Iniciar sesión</string>
    <string name="tv_register"> Regístrate</string>


    <!--GENEROS-->
    <string name="gen_action">⚔️ Acción</string>
    <string name="gen_adventure">🧭 Aventura</string>
    <string name="gen_animation">🥸 Animación</string>
    <string name="gen_comedy">😂 Comedia</string>
    <string name="gen_crime">🗡️ Crimen</string>
    <string name="gen_documentary">📖 Documental</string>
    <string name="gen_drama">🎭 Drama</string>
    <string name="gen_family">👨‍👩‍👧‍👦 Familia</string>
    <string name="gen_fantasy">🧙‍♂️ Fantasía</string>
    <string name="gen_history">🗿 Historia</string>
    <string name="gen_horror">👻 Terror</string>
    <string name="gen_music">🎵 Música</string>
    <string name="gen_mystery">🕵️ Misterio</string>
    <string name="gen_romance">💞 Romance</string>
    <string name="gen_scifi">🛸 Ciencia ficción</string>
    <string name="gen_tv_movie">📺 Película de TV</string>
    <string name="gen_thriller">😶 Suspense</string>
    <string name="gen_war">💣 Bélica</string>
    <string name="gen_western">🌵 Western</string>
    <string name="action">Acción</string>
    <string name="animation">Animación</string>
    <string name="adventure">Aventura</string>
    <string name="war">Bélica</string>
    <string name="scifi">Ciencia ficción</string>
    <string name="comedy">Comedia</string>
    <string name="crime">Crimen</string>
    <string name="documentary">Documental</string>
    <string name="drama">Drama</string>
    <string name="familiar">Familiar</string>
    <string name="history">Historia</string>
    <string name="mistery">Misterio</string>
    <string name="music">Música</string>
    <string name="western">Western</string>
    <string name="romantic">Romántica</string>
    <string name="television">Televisión</string>
    <string name="horror">Terror</string>
    <string name="thriller">Suspense</string>
    <string name="password_required">La contraseña no puede estar vacia\n</string>
    <string name="email_required">El email no puede estar vacio</string>
    <string name="check_email_reset_password">Por favor, revisa tu email\n</string>
    <string name="error_sending_reset_email">Ha habido un error al enviar el email\n</string>

</resources>
