<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBFB"
    android:padding="20dp"
    tools:context=".authentication.RegisterActivity1">


    <fragment
        android:id="@+id/fragmentContainerView"
        android:name="com.example.quevemoshoy.authentication.StepperFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tv_register1_text"
        android:textColor="#9F9E9E"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:text="@string/tv_user"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hint_user"
        android:inputType="text|textNoSuggestions"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#7A7777"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user"
       />


    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tv_email"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#7A7777"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tv_password"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#7A7777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password" />

    <TextView
        android:id="@+id/tv_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/tv_repeat_password"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#7A7777"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repeat_password" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:text="@string/btn_continue"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/et_repeat_password"
        tools:layout_editor_absoluteX="20dp" />

    <TextView
        android:id="@+id/ff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/have_account"
        android:textColor="#4C4949"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue"
        tools:layout_editor_absoluteX="36dp" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:clickable="true"
        android:text="@string/tv_login"
        android:textColor="#64B6CD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ff"
        app:layout_constraintEnd_toEndOf="@+id/btn_continue"
        app:layout_constraintStart_toEndOf="@+id/ff"
        app:layout_constraintTop_toTopOf="@+id/ff"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>